# flask_app_practice

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py
app/config/: __init__.py  api_config.py  database_config.py
app/dtos/: __init__.py  students.py
app/models/: __init__.py  base.py  course_registration.py  courses.py  students.py  timestamp_mixin.py
app/routes/: __init__.py  courses.py  health_check.py  students.py
app/services/: __init__.py  health_check.py  students.py
app/types/: __init__.py  health_check.py
app/util/: __init__.py  app_version.py  error_handler.py  get_required_env.py  validate_schema.py
migrations/: alembic.ini
migrations/versions/: 2025-09-08_13_54_initial_migrate.py  2025_09_09_00_05_.py  2025_09_09_00_45_add_course_registration_association.py  2025_09_10_23_52_initial_migration.py
