[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["sayan3sarkar <sayansarkar333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
flask-smorest = "^0.46.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
